crates/ink/tests/ui/contract/fail/cfg-forbidden-usage-03.stderr
error: The feature `std` is not allowed in `cfg`.

       Allowed in `#[cfg(…)]`:
       - `test`
       - `feature` (without `std`)
       - `any`
       - `not`
       - `all`
  --> tests/ui/contract/fail/cfg-forbidden-usage-03.rs:16:23
   |
16 |         #[cfg(any(not(feature = "std")))]
   |                       ^^^^^^^
